--- a/app/src/main/res/layout/custom_user_message_frame.xml
+++ b/app/src/main/res/layout/custom_user_message_frame.xml
@@ -5,28 +5,21 @@
 
     <RelativeLayout
         android:layout_width="200dp"
-        android:layout_height="40dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="20dp"
         android:layout_gravity="end"
-        android:background="@drawable/custom_view_holder_2">
-
-        <ImageView
-            android:id="@+id/chat_user_picture"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="3dp"
-            android:src="@drawable/user_icon"/>
+        android:background="@drawable/custom_view_holder_8">
 
         <TextView
             android:id="@+id/chat_username"
             android:layout_width="90dp"
             android:layout_height="35dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginStart="9dp"
+            android:layout_marginTop="7dp"
             android:layout_marginBottom="10dp"
             android:text="username"
-            android:textAlignment="center"
-            android:layout_toEndOf="@+id/chat_user_picture"/>
+            android:textAlignment="center"/>
 
         <View
             android:id="@+id/separator"
@@ -37,9 +30,11 @@
         </View>
 
         <TextView
+            android:id="@+id/current_time"
             android:layout_width="50dp"
             android:layout_height="35dp"
-            android:layout_marginTop="9dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="7dp"
             android:layout_marginBottom="10dp"
             android:textAlignment="center"
             android:layout_toEndOf="@id/separator"/>
@@ -50,6 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="38dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/custom_view_holder_8">
 
         <TextView
@@ -57,7 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="2dp"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"/>
 
