--- a/app/src/main/res/layout/fragment_update_username.xml
+++ b/app/src/main/res/layout/fragment_update_username.xml
@@ -62,7 +62,7 @@
                     android:layout_marginStart="15dp"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="15dp"
-                    android:text="PLACEHOLDER"
+                    android:text="@string/not_available"
                     android:textAlignment="center"
                     android:textSize="16sp"/>
 
@@ -83,7 +83,7 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="25dp"
-                    android:text="PLACEHOLDER"
+                    android:hint="Enter new username here..."
                     android:textAlignment="center"
                     android:textSize="16sp"/>
 
